<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#0DA6A6"
    tools:context=".CadastroActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastroDeUsuario"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#4A4A4A"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomeComp"
                android:inputType="textPersonName"
                android:textColorHint="#808080"
                android:textColor="#4A4A4A"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#808080"
                android:textColor="#4A4A4A"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel"
                android:inputType="phone"
                android:textColorHint="#808080"
                android:textColor="#4A4A4A"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:inputType="number"
                android:maxLength="11"
                android:textColorHint="#808080"
                android:textColor="#4A4A4A"
                android:layout_marginBottom="12dp" />

            <EditText
                android:id="@+id/editTextDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="date"
                android:textColorHint="#808080"
                android:textColor="#4A4A4A"
                android:layout_marginBottom="24dp" />

            <Button
                android:id="@+id/buttonCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:backgroundTint="#E60026"
                android:textColor="#FFF"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


