<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DashboardsActivity">

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_round"
        android:contentDescription="Voltar"
        android:src="@drawable/ic_back"
        app:tint="@android:color/black"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="Abrir menu"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_menu"
        app:tint="#0DA6A6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/container_principal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation">

        <ImageView
            android:id="@+id/imagemLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/imagem_logo"
            android:contentDescription="Logo do aplicativo"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/txtDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dashboards"
            android:textColor="#FFFFFF"
            android:background="#0DA6A6"
            android:padding="12dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="24dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnReg"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:text="@string/alReg"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#2ecc71"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="0dp"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/btnAlerta"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:text="@string/alAlerta"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#f1c40f"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="0dp"
                        app:cornerRadius="12dp" />


                    <Button
                        android:id="@+id/btnEva"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:text="@string/alEvadidos"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#e74c3c"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="10dp"
                        android:padding="0dp"
                        app:cornerRadius="12dp" />


                    <Button
                        android:id="@+id/btnEgressos"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:text="@string/alEgressos"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#3498db"
                        android:layout_marginTop="10dp"
                        android:padding="0dp"
                        app:cornerRadius="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtDaApi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="4dp"
                        android:paddingTop="8dp"
                        app:cornerRadius="10dp"
                        android:paddingBottom="8dp"
                        android:textColor="#333333"
                        android:textSize="16sp"
                        android:tag="alunoTexto" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuLateral"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F8F8F8"
        android:visibility="gone"
        android:elevation="10dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.6">
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        app:itemIconTint="@color/bottom_nav_color_selector"
        app:itemTextColor="@color/bottom_nav_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>